--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -5,7 +5,7 @@
     <div class="col-md-4">
         <div class="card">
             <div class="card-body" style="overflow-y: auto;">
-                <h1 class="card-title text-center mb-4">Login</h1>
+                <h1 class="card-title text-center mb-4">Login.</h1>
                 <form method="post">
                     {% csrf_token %}
                     <div class="form-group">
