--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -9,7 +9,7 @@
                 <form method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="username">Usuário</label>
+                        <label for="username">Usuário.</label>
                         <input type="text" class="form-control" id="username" name="username">
                     </div>
                     <div class="form-group">
